--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 </head>
 <body>
    <header>
-<a href="./index.html">WebStudio</a>
-
 <nav>
+    <a href="./index.html">WebStudio</a>
     <ul>
         <li><a href="./index.html">Studio</a></li>
         <li><a href="./index.html">Portfolio</a></li>
@@ -57,22 +56,22 @@
         <h2>Our Team</h2>
         <ul>
             <li>
-                <img src="./img./img-1.jpg" width="264" height="260" alt="image (Mark Guerrero)">
+                <img src="./images/img-1.jpg" width="264" height="260" alt="image (Mark Guerrero)">
                 <h3>Mark Guerrero</h3>
                 <p>Product Designer</p>
             </li>
             <li>
-                <img src="./img./img-2.jpg" width="264" height="260" alt="image (Tom Ford)">
+                <img src="./images/img-2.jpg" width="264" height="260" alt="image (Tom Ford)">
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
-                <img src="./img./img-3.jpg" width="264" height="260" alt="image (Camila Garcia)">
+                <img src="./images/img-3.jpg" width="264" height="260" alt="image (Camila Garcia)">
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="./img./img-4.jpg" width="264" height="260" alt="image (Daniel Wilson)">
+                <img src="./images/img-4.jpg" width="264" height="260" alt="image (Daniel Wilson)">
                 <h3>Daniel Wilson</h3>
                 <p>UI Designer</p>
             </li>
